Rework of filesystem info and space update after refresh and file operation. Part of cleaning VFS

BUG: 374404